--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr-fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,30 +8,34 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="algo1">
-      <h2>1. Afficher les numéros de 1 à 10</h2>
-      <p id="algo1"></p>
-    </div>
+    <h1>50 Algos chalenge</h1>
 
-    <div class="algo2">
-      <h2>2. Afficher les nombres impairs inférieurs à 100</h2>
-      <p id="algo2"></p>
-    </div>
-
-    <div class="algo3">
-      <h2>2. Afficher la table de 7</h2>
-      <p id="algo3"></p>
-    </div>
-
-    <div class="algo4">
-      <h2>2. Afficher toutes le tables de multiplication de 1 à 10</h2>
-      <p id="algo4"></p>
-    </div>
-
-    <div class="algo5">
-      <h2>2. Afficher toutes le tables de multiplication de 1 à 10</h2>
-      <p id="algo5"></p>
-    </div>
+    <section>
+      <div class="algo1">
+        <h2>1. Afficher les numéros de 1 à 10</h2>
+        <p id="algo1"></p>
+      </div>
+  
+      <div class="algo2">
+        <h2>2. Afficher les nombres impairs inférieurs à 100</h2>
+        <p id="algo2"></p>
+      </div>
+  
+      <div class="algo3">
+        <h2>3. Afficher la table de 7</h2>
+        <p id="algo3"></p>
+      </div>
+  
+      <div class="algo4">
+        <h2>4. Afficher toutes le tables de multiplication de 1 à 10</h2>
+        <p id="algo4"></p>
+      </div>
+  
+      <div class="algo5">
+        <h2>5. Afficher toutes le tables de multiplication de 1 à 10</h2>
+        <p id="algo5"></p>
+      </div>
+    </section>
 
     <script type="module" src="/main.js"></script>
   </body>
