--- a/index.html
+++ b/index.html
@@ -11,30 +11,35 @@
     <h1>50 Algos chalenge</h1>
 
     <section>
-      <div class="algo1">
+      <article class="algo1">
         <h2>1. Afficher les numéros de 1 à 10</h2>
         <p id="algo1"></p>
-      </div>
+      </article>
   
-      <div class="algo2">
+      <article class="algo2">
         <h2>2. Afficher les nombres impairs inférieurs à 100</h2>
         <p id="algo2"></p>
-      </div>
+      </article>
   
-      <div class="algo3">
+      <article class="algo3">
         <h2>3. Afficher la table de 7</h2>
         <p id="algo3"></p>
-      </div>
+      </article>
   
-      <div class="algo4">
+      <article class="algo4">
         <h2>4. Afficher toutes le tables de multiplication de 1 à 10</h2>
         <p id="algo4"></p>
-      </div>
+      </article>
   
-      <div class="algo5">
-        <h2>5. Afficher toutes le tables de multiplication de 1 à 10</h2>
+      <article class="algo5">
+        <h2>5. Afficher la somme de tout les chiffres de 1 à 10</h2>
         <p id="algo5"></p>
-      </div>
+      </article>
+
+      <article class="algo6">
+        <h2>6. Calculer 10</h2>
+        <p id="algo6"></p>
+      </article>
     </section>
 
     <script type="module" src="/main.js"></script>
