--- a/index.html
+++ b/index.html
@@ -4,41 +4,67 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>50 algos chalenge</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>50 Algos chalenge</h1>
 
     <section>
-      <article class="algo1">
+      <article class="blue">
         <h2>1. Afficher les numéros de 1 à 10</h2>
         <p id="algo1"></p>
       </article>
   
-      <article class="algo2">
+      <article class="violet">
         <h2>2. Afficher les nombres impairs inférieurs à 100</h2>
         <p id="algo2"></p>
       </article>
   
-      <article class="algo3">
+      <article class="blue">
         <h2>3. Afficher la table de 7</h2>
         <p id="algo3"></p>
       </article>
   
-      <article class="algo4">
+      <article class="violet">
         <h2>4. Afficher toutes le tables de multiplication de 1 à 10</h2>
         <p id="algo4"></p>
       </article>
   
-      <article class="algo5">
+      <article class="blue">
         <h2>5. Afficher la somme de tout les chiffres de 1 à 10</h2>
         <p id="algo5"></p>
       </article>
 
-      <article class="algo6">
-        <h2>6. Calculer 10</h2>
+      <article class="violet">
+        <h2>6. Calculer 10!</h2>
         <p id="algo6"></p>
+      </article>
+
+      <article class="blue">
+        <h2>7. Calculer la somme des nombres pairs supérieurs à 10 et inférieurs à 30</h2>
+        <p id="algo7"></p>
+      </article>
+
+      <article class="violet">
+        <h2>8. Créer une fonction qui convertira de Celsius en Fahrenheit</h2>
+        <div class="convert">
+          <div class="c2f">
+            <div>
+              <input type="number" id="celsiusInput" max="50" min="-20"><p>&MediumSpace; °C</p>
+            </div>
+    
+            <p id="c2f"></p>
+          </div>
+  
+          <div class="f2c">
+            <div>
+              <input type="number" id="fahrenheitInput" max="122" min="-4"><p>&MediumSpace; °F</p>
+            </div>
+    
+            <p id="f2c"></p>
+          </div>
+        </div>
       </article>
     </section>
 
