--- a/index.html
+++ b/index.html
@@ -11,43 +11,53 @@
     <h1>50 Algos chalenge</h1>
 
     <section>
+      <!-- Algo 1 -->
       <article class="blue">
         <h2>1. Afficher les numéros de 1 à 10</h2>
         <p id="algo1"></p>
       </article>
   
+      <!-- Algo 2 -->
       <article class="violet">
         <h2>2. Afficher les nombres impairs inférieurs à 100</h2>
         <p id="algo2"></p>
       </article>
   
+      <!-- Algo 3 -->
       <article class="blue">
         <h2>3. Afficher la table de 7</h2>
         <p id="algo3"></p>
       </article>
   
+      <!-- Algo 4 -->
       <article class="violet">
         <h2>4. Afficher toutes le tables de multiplication de 1 à 10</h2>
         <p id="algo4"></p>
       </article>
   
+      <!-- Algo 5 -->
       <article class="blue">
         <h2>5. Afficher la somme de tout les chiffres de 1 à 10</h2>
         <p id="algo5"></p>
       </article>
 
+      <!-- Algo 6 -->
       <article class="violet">
         <h2>6. Calculer 10!</h2>
         <p id="algo6"></p>
       </article>
 
+      <!-- Algo 7 -->
       <article class="blue">
         <h2>7. Calculer la somme des nombres pairs supérieurs à 10 et inférieurs à 30</h2>
         <p id="algo7"></p>
       </article>
 
+      <!-- Algo 8 et 9 -->
       <article class="violet">
-        <h2>8. Créer une fonction qui convertira de Celsius en Fahrenheit</h2>
+        <h2>8 et 9. Créer une fonction qui convertira de Celsius en Fahrenheit et de Fahrenheit en Celsius</h2>
+
+        <!-- Algo 8 -->
         <div class="convert">
           <div class="c2f">
             <div>
@@ -57,6 +67,7 @@
             <p id="c2f"></p>
           </div>
   
+          <!-- Algo 9 -->
           <div class="f2c">
             <div>
               <input type="number" id="fahrenheitInput" max="122" min="-4"><p>&MediumSpace; °F</p>
@@ -65,6 +76,18 @@
             <p id="f2c"></p>
           </div>
         </div>
+      </article>
+
+      <!-- Algo 10 -->
+      <article class="blue">
+        <h2>10. Calculer la somme de nombres dans un tableau de nombres</h2>
+        <p id="algo10"></p>
+      </article>
+
+      <!-- Algo 11 -->
+      <article class="violet">
+        <h2>11. Calculer la moyenne des nombres dans un tableau de nombres</h2>
+        <p id="algo11"></p>
       </article>
     </section>
 
