--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>50 Algos chalenge</h1>
+    <header>
+      <h1>50 Algos chalenge</h1>
+    </header>
 
-    <section>
+    <main>
       <!-- Algo 1 -->
       <article class="blue">
         <h2>1. Afficher les numéros de 1 à 10</h2>
@@ -89,7 +91,11 @@
         <h2>11. Calculer la moyenne des nombres dans un tableau de nombres</h2>
         <p id="algo11"></p>
       </article>
-    </section>
+    </main>
+
+    <footer>
+      <small>&copy; algorithms made by Derow</small>
+    </footer>
 
     <script type="module" src="/main.js"></script>
   </body>
