--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <footer>
       <small>&copy; algorithms made by Derow</small>
+      <p>test</p>
     </footer>
 
     <script type="module" src="/main.js"></script>
