--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         <h2>11. Calculer la moyenne des nombres dans un tableau de nombres</h2>
         <p id="algo11"></p>
       </article>
+
+      <article class="blue">
+        <h2>12. Créez une fonction qui reçoit un tableau de nombres comme argument et renvoie un tableau contenant uniquement les nombres positifs</h2>
+        <p id="algo12"></p>
+      </article>
     </main>
 
     <footer>
