--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
         <h2>12. Créez une fonction qui reçoit un tableau de nombres comme argument et renvoie un tableau contenant uniquement les nombres positifs</h2>
         <p id="algo12"></p>
       </article>
+
+      <article class="violet">
+        <h2>13. Trouver le nombre maximum dans un tableau de nombres</h2>
+        <p id="algo13"></p>
+      </article>
     </main>
 
     <footer>
